修改配置文件（解决无法使用侧边）2

--- a/themes/butterfly/source/css/_sxiaohe-style/home/index.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/home/index.css
@@ -1,9 +1,9 @@
 #post {
-    padding: 50px 40px;!important;
+    padding: 50px 40px!important;
 }
 @media screen and (max-width: 900px) {
     #post {
-        padding: 20px 20px 30px;!important;
+        padding: 20px 20px 30px!important;
     }
 }
 .layout {
