修改配置文件字体

--- a/themes/butterfly/source/css/_sxiaohe-style/style/index.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/style/index.css
@@ -116,4 +116,5 @@
 /* QCQX 首页文章卡片设置 */
 #recent-posts > .recent-post-item .post_cover img.post_bg {
     border-radius: 12px;
+    transform: none;
 }
