新增加即刻短文

--- a/themes/butterfly/layout/page.pug
+++ b/themes/butterfly/layout/page.pug
@@ -9,6 +9,8 @@ block content
         h1.page-title= page.title
 
     case page.type
+      when 'essay'
+        include includes/page/essay.pug
       when 'about'
         include includes/page/about.pug
       when 'equipment'
