--- a/themes/butterfly/layout/includes/bbTimeList.pug
+++ b/themes/butterfly/layout/includes/bbTimeList.pug
@@ -1,12 +1,14 @@
-#bbTimeList.bbTimeList.container
-    i.bber-logo.iconfont.icon-bblogo(onclick=`pjax.loadUrl("/essay/")`,title="即刻短文",style="font-size: 2rem;")
-    #bbtalk.swiper-container.swiper-no-swiping(tabindex="-1")
-      #bber-talk.swiper-wrapper(onclick=`pjax.loadUrl("/essay/")`)
-        each i in site.data.essay
-          each item, index in i.essay_list
-            if index < 10
-              - var contentText = item.image ? item.content + ' [图片]' : item.content
-              .li-style.swiper-slide= contentText
-
-    i.bber-gotobb.fas.fa-arrow-circle-right(onclick=`pjax.loadUrl("/essay/")`,title="查看全文")
-script(src='/js/swiper-bundle.min.js',data-pjax='')
+#main_top.main_top
+    #bbTimeList.bbTimeList.container
+        i.iconfont.icon-laba.bber-logo
+        #bbtalk.swiper-container.swiper-no-swiping.essay_bar_swiper_container(tabindex="-1")
+            #bber-talk.swiper-wrapper(onclick=`pjax.loadUrl("/essay/")`)
+                each i in site.data.essay
+                    each item, index in i.essay_list
+                        if index < 20
+                            -
+                                var regexBr = /<br\s*\/?>/gi;
+                                var contentText = item.content.replace(regexBr, '');
+                                contentText += item.image ? ' [图片]' : '';
+                                contentText += item.bilibili ? ' [视频]' : '';
+                            .li-style.swiper-slide= contentText
