--- a/themes/butterfly/source/css/_sxiaohe-style/style/index.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/style/index.css
@@ -118,47 +118,73 @@
     border-radius: 12px;
     transform: none;
 }
-/* 主页哔哔bb */
+/* 首页说说内置 */
+#main_top {
+    z-index: 1;
+    max-width: 1400px;
+    margin: 20px auto -20px;
+    width: 100%;
+    padding: 0 15px
+}
+
+@media screen and (max-width: 768px) {
+    div#main_top {
+        padding: 10px 6px 0;
+        margin: 0 0 -10px
+    }
+}
+
+#bbTimeList {
+    width: 100%;
+    min-height: 50px;
+    background: var(--card-bg);
+    color: var(--june-fontcolor);
+    padding: .5rem 1rem;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    font-weight: 700;
+    border: var(--style-border);
+    border-radius: 10px;
+    box-shadow: var(--june-shadow-lightblack);
+}
+
+#bbtalk {
+    width: 90%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 #bber-talk {
     width: 100%;
     height: 25px;
     line-height: 25px;
-  }
-  
-  #bber-talk .li-style {
+    display: flex;
+    flex-direction: column;
+}
+
+.bber-logo {
+    font-size: 1.5rem !important;
+    line-height: 22px;
+    transition: all 0.3s ease 0s;
+}
+
+#bber-talk .li-style {
     width: 100%;
+    max-width: 100%;
     height: 25px;
     text-align: center;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
     transition: 0.3s;
-  }
-  
-  #bber-talk .li-style:hover{
-    color: #49b1f5;
-  }
-  
-  #bber-talk ul,li{
-    list-style:none;
-    display:block;
-    margin: 0;
-    padding: 0;
-  }
-  
-  #bbTimeList{
-    background: var(--card-bg);
-    color: var(--font-color);
-    margin-top: 1rem;
-    padding: 0.6rem 1rem 0.5rem 1rem;
-    border-radius: 12px;
+    font-weight: 700;
+    margin: auto;
     cursor: pointer;
-    display: flex;
-  }
-  
-  #bbtalk{
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-  }
+    white-space: nowrap;
+}
+
+#bbTimeList:hover {
+    border: var(--style-border-hover);
+    box-shadow: var(--june-shadow-main);
+}
