--- a/themes/butterfly/layout/includes/layout.pug
+++ b/themes/butterfly/layout/includes/layout.pug
@@ -18,7 +18,7 @@ html(lang=config.language data-theme=theme.display_mode class=htmlClassHideAside
 
     if page.type !== '404'
       #body-wrap(class=pageType)
-        include ./header/index.
+        include ./header/index.pug
         if (is_home())
           include ./bbTimeList.pug
         include ./hometop.pug
