修改部分文件（hometop）

--- a/themes/butterfly/layout/includes/hometop.pug
+++ b/themes/butterfly/layout/includes/hometop.pug
@@ -63,7 +63,7 @@ if is_home()
                                 | 山河远阔，人间烟火
                                 br
                                 | 无一是你，无一不是你
-                        .todayCard-cover(style='background:url(/img/todayCardCover.jpeg) no-repeat center/cover', onerror='this.onerror=null,this.src="/img/404.png"')
+                        .todayCard-cover(style='background:url(/img/todayCardCover.jpg) no-repeat center/cover', onerror='this.onerror=null,this.src="/img/404.png"')
                         .banner-button-group
                             a.banner-button(onclick='window.event.cancelBubble=!0,bywind.hideTodayCard()')
                                 i.hnfont.icon-add-circle-fill
