--- a/themes/butterfly/layout/includes/header/nav.pug
+++ b/themes/butterfly/layout/includes/header/nav.pug
@@ -8,14 +8,11 @@ nav#nav
           .back-menu-list-title 网页
           .back-menu-list
             a.back-menu-item(href='/', title='前往博客主页', target='_blank', one-link-mark='yes')
-              img.back-menu-item-icon(src='https://img02.anheyu.com/adminuploads/1/2022/09/05/6315ec9737ac4.png')
+              img.back-menu-item-icon(src='/img/avatar.jpg')
               span.back-menu-item-text 博客
             a.back-menu-item(href='https://www.cloud.anheyu.com/', rel='external nofollow', title='前往云盘主页', target='_blank', one-link-mark='yes')
               img.back-menu-item-icon(src='https://npm.elemecdn.com/anzhiyu-blog-static@1.0.4/img/avatar.jpg')
               span.back-menu-item-text 云盘主页
-            a.back-menu-item(href='https://cloud.anheyu.com/', rel='external nofollow', title='前往安知鱼云盘', target='_blank', one-link-mark='yes')
-              img.back-menu-item-icon(src='https://img02.anheyu.com/adminuploads/1/2022/04/27/6268e7d9de532.png')
-              span.back-menu-item-text 安知鱼云盘
 
     a#site-name(href=url_for('/'))
       .title #[=config.title]
