--- a/themes/butterfly/source/css/_sxiaohe-style/style/index.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/style/index.css
@@ -128,15 +128,16 @@
 
 @media screen and (max-width: 768px) {
     div#main_top {
-        padding: 10px 6px 0;
-        margin: 0 0 -10px
+        padding: 10px 6px 20px;
+        margin: 0 0 -10px;
+        padding-left: 15px;
+        padding-right: 15px;
     }
 }
 
 #bbTimeList {
     width: 100%;
     min-height: 50px;
-    background: var(--card-bg);
     color: var(--june-fontcolor);
     padding: .5rem 1rem;
     display: flex;
