--- a/themes/butterfly/layout/includes/layout.pug
+++ b/themes/butterfly/layout/includes/layout.pug
@@ -19,8 +19,8 @@ html(lang=config.language data-theme=theme.display_mode class=htmlClassHideAside
     if page.type !== '404'
       #body-wrap(class=pageType)
         include ./header/index.pug
-        if (is_home())
-          include ./bbTimeList.pug
+        if theme.essay.enable && theme.essay.home_mini
+          include ./essay_mini.pug
         include ./hometop.pug
 
         main#content-inner.layout(class=hideAside)
