--- a/themes/butterfly/source/css/_sxiaohe-style/style/inject.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/style/inject.css
@@ -1,206 +1,482 @@
 /* 引入式兼容模式 */
 /* 由苏晓河进行编写以及调整 */
 /* 时间：2025年2月5日 */
-/**********************************************************************************************************************************************
-你不应该来到这里，error422||error422|error422|error422|error422|error422|error422|error422|error422|error422|error422|error422|error422|error422
-|error422|error422|error422|error422|error422|error422|error422|error422|error422|error422|error422|error422|error422|error422|error422|error42
-2|*/
-/* home top */
-#home_top {
+/*首页bber*/
+#icat-bber {
+    margin-top: 1.5rem;
     width: 100%;
-}
-.home_top_group {
-    border-radius: 11px;
-    overflow: auto;
-    width: 100%;
-    margin-bottom: 0;
-}
-.homeTopGroup {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    width: 100%;
-    overflow: auto;
-    overflow-x: score;
-    border-radius: 11px;
-}
-.homeTopGroup::-webkit-scrollbar {
-    display: none;
-}
-
-.homeTopGroup .category_group{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-width: 200px;
-    min-height: 166px;
-}
-.top_post_item>.post_cover>a{
-    display: block;
-}
-.homeTopGroup .category_item {
-    overflow: hidden;
-    transform: scale(1);
-    transition: .3s;
-    height: 48%;
-    border-radius: 12px;
-}
-.homeTopGroup .category_item a.category_button {
-    height: 100%;
-    width: 100%;
-    background: var(--mj-card-bg);
-    border-radius: 12px;
-    display: inline-block;
-    text-align: left;
-    line-height: 4em;
-    font-weight: 800;
-    font-size: 16px;
-    color: var(--mj-white);
-    transition: all .4s cubic-bezier(.39,.575,.565,1);
-    transform: scale(1);
-    overflow: hidden;
-}
-.category_button_text {
-    padding-left: 25px;
-}
-a.category_button i {
-    font-size: 3rem;
-    opacity: .3;
-    position: absolute;
-    right: 15px;
-    top: 10%;
-    transition: .3s;
-    transform: rotate(-10deg);
-    /*width: 100px;
-    text-align: center;*/
-}
-a.category_button:hover i {
-    opacity: .8;
-    transition: .8s;
-    transition-delay: .15s;
-    transform: scale(1.1)
-}
-a.category_button:hover:after{
-    width: 3rem;
-    transition: .8s;
-}
-a.category_button:after {
-    top: 45px;
-    width: 1rem;
-    left: 25px;
-    height: 2.5px;
-    background: var(--mj-white);
-    content: "";
-    border-radius: 1px;
-    position: absolute;
-    transition: .8s;
-}
-@media screen and (max-width: 1245px){
-  .homeTopGroup,.home_top_group {
-      border-radius: 0px;
   }
-}
-@media screen and (max-width: 768px){
-  .homeTopGroup .category_group {
-    min-width: 130px!important;
-  }
-  #home_top {
-    width: calc(100% + 17px);
-  }
-  .home_top_group {
-      overflow: visible;
-  }
-  .homeTopGroup {
-      width: calc(100% + 17px);
-      margin-left: -17px;
-  }
-  .homeTopGroup .category_group{
-      margin-left: 17px;
-  }
-}
-.top_post_group{
-    display: flex;
-    position: relative;
-}
-.top_post_group .top_post_item {
-    display: flex;
-    width: 200px;
-    height: 166px;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-left: 8px;
-    background: var(--mj-card-bg);
-    border-radius: 12px;
-    overflow: hidden;
-    border: var(--style-border);
-    color: var(--text-highlight-color);
+  #icat-bber .icat-page #waterfall {
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -o-transition: 0.3s;
+    -ms-transition: 0.3s;
     transition: 0.3s;
-}
-/* .top_post_group .top_post_item:first-child{
-    right: 0px;
-} */
-.top_post_group .top_post_item:hover {
-    border: var(--style-hover-border);
-    background: #128adadb;
-}
-.top_post_group .top_post_item .post_cover {
-    width: 100%;
-    height: 110px;
+  }
+  #icat-bber .icat-page #waterfall.list {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -moz-box-orient: horizontal;
+    -o-box-orient: horizontal;
+    -webkit-box-lines: multiple;
+    -moz-box-lines: multiple;
+    -o-box-lines: multiple;
+    -webkit-flex-flow: row wrap;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
+    -webkit-box-pack: justify;
+    -moz-box-pack: justify;
+    -o-box-pack: justify;
+    -ms-flex-pack: justify;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+  }
+  #icat-bber .icat-page #waterfall.show {
+    opacity: 1;
+    -ms-filter: none;
+    filter: none;
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item {
     position: relative;
-}
-.top_post_group .top_post_item .post_cover img {
+    width: 32%;
+    border: var(--style-border);
+    border-radius: 12px;
+    padding: 1rem 1rem 0.9rem;
+    -webkit-transition: all 0.3s ease 0s;
+    -moz-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    -ms-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -moz-box-orient: vertical;
+    -o-box-orient: vertical;
+    -webkit-box-lines: single;
+    -moz-box-lines: single;
+    -o-box-lines: single;
+    -webkit-flex-flow: column nowrap;
+    -ms-flex-flow: column nowrap;
+    flex-flow: column nowrap;
+    -webkit-box-pack: justify;
+    -moz-box-pack: justify;
+    -o-box-pack: justify;
+    -ms-flex-pack: justify;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+    -webkit-box-align: start;
+    -moz-box-align: start;
+    -o-box-align: start;
+    -ms-flex-align: start;
+    -webkit-align-items: flex-start;
+    align-items: flex-start;
+    background: var(--icat-card-bg);
+    -webkit-box-shadow: var(--icat-shadow-border);
+    box-shadow: var(--icat-shadow-border);
+    margin-right: 2%;
+    margin-bottom: 1rem;
+    -webkit-animation: slide-in 0.6s 0.4s backwards;
+    -moz-animation: slide-in 0.6s 0.4s backwards;
+    -o-animation: slide-in 0.6s 0.4s backwards;
+    -ms-animation: slide-in 0.6s 0.4s backwards;
+    animation: slide-in 0.6s 0.4s backwards;
+  }
+  @media screen and (max-width: 1024px) {
+    #icat-bber .icat-page #waterfall .icat-bber-item {
+      width: 49%;
+      margin-right: 1%;
+    }
+  }
+  @media screen and (max-width: 768px) {
+    #icat-bber .icat-page #waterfall .icat-bber-item {
+      width: 100%;
+      margin-right: 0px;
+    }
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item:hover {
+    border-color: var(--icat-blue);
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-content {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    -webkit-box-lines: multiple;
+    -moz-box-lines: multiple;
+    -o-box-lines: multiple;
+    -webkit-flex-flow: wrap;
+    -ms-flex-flow: wrap;
+    flex-flow: wrap;
+    border-radius: 12px;
+    width: 100%;
+    height: 100%;
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-content p {
+    margin: 0px;
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-content .datacont {
+    -webkit-box-ordinal-group: 0;
+    -moz-box-ordinal-group: 0;
+    -o-box-ordinal-group: 0;
+    -ms-flex-order: 0;
+    -webkit-order: 0;
+    order: 0;
+    font-size: 0.8rem;
+    font-weight: 700;
+    color: var(--icat-fontcolor);
+    width: 100%;
+    line-height: 1.38;
+    border-radius: 12px;
+    margin-bottom: 0.8rem;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -moz-box-orient: vertical;
+    -o-box-orient: vertical;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    text-align: justify;
+    padding: 0px 8px;
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-content .icat-bber-image {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    gap: 8px;
+    width: 100%;
+    -webkit-box-lines: multiple;
+    -moz-box-lines: multiple;
+    -o-box-lines: multiple;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+    padding-left: 8px;
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-content .icat-bber-image .imgbox {
+    width: calc(100% / 4 - 8px);
+    aspect-ratio: 1/1;
+    overflow: hidden;
+    border-radius: 6px;
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-content .icat-bber-image .imgbox a {
+    height: 100px;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    position: relative;
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-content .icat-bber-image .imgbox a img {
     object-fit: cover;
     width: 100%;
-    height: 110px;
-    background: var(--mj-secondbg);
-}
-.top_post_group .top_post_item .post_cover .post_cover_info {
+    max-height: 100%;
+    border-radius: 6px;
+    -webkit-animation: slide-in 0.6s 0.4s backwards;
+    -moz-animation: slide-in 0.6s 0.4s backwards;
+    -o-animation: slide-in 0.6s 0.4s backwards;
+    -ms-animation: slide-in 0.6s 0.4s backwards;
+    animation: slide-in 0.6s 0.4s backwards;
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-content .icat-bber-video {
+    position: relative;
+    padding: 30% 50%;
+    margin-bottom: 10px;
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-content .icat-bber-video video,
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-content .icat-bber-video iframe {
     position: absolute;
-    top: 0;
-    width: 101%;
-    height: 100%;
-    opacity: 0;
-    background-color: rgba(0,0,0,0.7) !important;
-    transition: all 0.3s ease;
-    display: flex;
-} 
-.top_post_group .top_post_item:hover .post_cover .post_cover_info{
-    opacity: 1;
-}
-.top_post_group .top_post_item .post_cover .post_cover_info .post_cover_text{
-    color: #fff;
-    padding: 13px 14px;
-    font-size: 15px;
-    font-weight: 400;
-    margin: 0;
-    -webkit-line-clamp: 3;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-}
-.top_post_group .top_post_item .post_info a{
-    color: var(--mj-fontcolor) !important;
-    transition: 0;
-}
-.top_post_group .top_post_item:hover .post_info a{
-    color: var(--mj-white) !important;
-}
-.top_post_group .top_post_item .post_info {
-    padding: 6px 9px!important;
-    transition: .3s;
     width: 100%;
     height: 100%;
-}
-.top_post_group .top_post_item .post_info .article-title {
-    -webkit-line-clamp: 2;
+    left: 0;
+    top: 0;
+    margin: 0;
+    border-radius: 6px;
+    border: var(--style-border);
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-content .icat-bber-music {
+    width: 100%;
+    height: 90px;
+    margin: 0 0 0.5rem;
+    border-radius: 8px;
     overflow: hidden;
+    border: var(--style-border);
+    background: var(--icat-secondbg);
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item hr {
     display: -webkit-box;
-    -webkit-box-orient: vertical;
-    line-height: 1.4;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    position: relative;
+    margin: 8px 0px;
+    border: 1px dashed var(--icat-blue);
+    width: 100%;
+    opacity: 0.4;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
+    filter: alpha(opacity=40);
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-bottom {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    -webkit-box-pack: justify;
+    -moz-box-pack: justify;
+    -o-box-pack: justify;
+    -ms-flex-pack: justify;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 10px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-bottom .icat-bber-info {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-bottom .icat-bber-info .icat-bber-info-time,
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-bottom .icat-bber-info .icat-bber-info-from {
+    color: var(--icat-fontcolor);
+    font-size: 0.7rem;
+    background-color: var(--icat-gray-op);
+    padding: 8px;
+    border-radius: 20px;
+    cursor: default;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -o-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    padding-right: 12px;
+    line-height: 1;
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-bottom .icat-bber-info .icat-bber-info-time i,
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-bottom .icat-bber-info .icat-bber-info-from i {
+    padding-right: 4px;
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-bottom .icat-bber-info .icat-bber-info-from {
+    margin-left: 0.5rem;
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-bottom .icat-bber-info .icat-bber-info-from span {
+    margin-left: 0.35rem;
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-bottom .icat-bber-info .icat-bber-content-link {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    margin-left: 0.5rem;
+    font-size: 0.7rem;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -o-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    background-color: rgba(103,194,58,0.13);
+    color: #67c23a;
+    padding: 0px 8px;
+    border-radius: 20px;
+    padding-right: 10px;
+    line-height: 1;
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-bottom .icat-bber-info .icat-bber-content-link i {
+    margin-right: 4px;
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-bottom .icat-bber-info .icat-bber-content-link:hover {
+    background-color: var(--icat-blue);
+    color: var(--icat-white);
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-bottom .icat-bber-info .icat-bber-info-top {
+    background-color: rgba(245,108,108,0.13);
+    color: #f56c6c;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    margin-left: 0.5rem;
+    font-size: 0.7rem;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -o-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    padding: 0px 8px;
+    border-radius: 20px;
+    padding-right: 10px;
+    line-height: 1;
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-bottom .icat-bber-info .icat-bber-info-top i {
+    margin-right: 4px;
+    font-size: 14px;
+    -webkit-transform: rotateZ(35deg);
+    -moz-transform: rotateZ(35deg);
+    -o-transform: rotateZ(35deg);
+    -ms-transform: rotateZ(35deg);
+    transform: rotateZ(35deg);
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-bottom .icat-bber-reply {
+    cursor: pointer;
+    -webkit-transition: 0.6s;
+    -moz-transition: 0.6s;
+    -o-transition: 0.6s;
+    -ms-transition: 0.6s;
+    transition: 0.6s;
+  }
+  #icat-bber .icat-page #waterfall .icat-bber-item .icat-bber-bottom .icat-bber-reply:hover {
+    color: var(--icat-blue);
+  }
+  #icat-bber .icat-page #icat-bber-tips {
+    font-size: 14px;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    -webkit-box-pack: center;
+    -moz-box-pack: center;
+    -o-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
     justify-content: center;
-    align-items: flex-end;
-    align-content: center;
-    font-weight: 800;
-    font-size: 14px!important;
-    padding: 0!important;
-}
+    margin-bottom: 2rem;
+    color: var(--icat-secondtext);
+  }
+  #icat-bber .icat-bber-loading {
+    position: revert !important;
+    margin: 0 auto;
+  }
+  #icat-bber .aplayer {
+    margin: 0;
+  }
+  #icat-bber .aplayer.aplayer-withlrc .aplayer-pic {
+    height: 82px;
+    width: 82px;
+    margin: 3px;
+    border-radius: 4px;
+  }
+  #icat-bber .aplayer.aplayer-withlrc .aplayer-info {
+    margin-left: 84px;
+    padding: 5px 7px 0;
+  }
+  #icat-bber .aplayer.aplayer-withlrc .aplayer-info .aplayer-music {
+    height: 23px;
+    text-align: center;
+  }
+  #icat-bber .aplayer.aplayer-withlrc .aplayer-info .aplayer-music .aplayer-title {
+    font-size: 0.8rem;
+    font-weight: 700;
+    margin: 0;
+    color: var(--icat-fontcolor);
+  }
+  #icat-bber .aplayer.aplayer-withlrc .aplayer-info .aplayer-controller {
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -o-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  #icat-bber .aplayer.aplayer-withlrc .aplayer-info .aplayer-controller .aplayer-bar-wrap {
+    padding: 0;
+  }
+  #icat-bber .aplayer.aplayer-withlrc .aplayer-info .aplayer-controller .aplayer-bar-wrap .aplayer-bar {
+    background: var(--icat-gray);
+    height: 8px;
+    border-radius: 12px;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -o-transition: 0.3s;
+    -ms-transition: 0.3s;
+    transition: 0.3s;
+    overflow: hidden;
+  }
+  #icat-bber .aplayer.aplayer-withlrc .aplayer-info .aplayer-controller .aplayer-bar-wrap .aplayer-bar .aplayer-loaded {
+    height: 100%;
+    border-radius: 12px;
+  }
+  #icat-bber .aplayer.aplayer-withlrc .aplayer-info .aplayer-controller .aplayer-bar-wrap .aplayer-bar .aplayer-played {
+    height: 100%;
+    border-radius: 12px;
+  }
+  #icat-bber .aplayer.aplayer-withlrc .aplayer-info .aplayer-controller .aplayer-bar-wrap .aplayer-bar .aplayer-played .aplayer-thumb {
+    display: none;
+  }
+  #icat-bber .aplayer.aplayer-withlrc .aplayer-info .aplayer-controller .aplayer-time {
+    position: initial;
+  }
+  #icat-bber .aplayer .aplayer-lrc {
+    height: 36px;
+    margin: -12px 0 3px;
+  }
+  #icat-bber .aplayer .aplayer-lrc::after {
+    height: 20%;
+  }
+  #icat-bber .aplayer .aplayer-lrc::before {
+    height: 4%;
+  }
+  #icat-bber .aplayer .aplayer-lrc p {
+    color: var(--icat-fontcolor);
+  }
+  [data-theme='dark'] #icat-bber .icat-page #waterfall .icat-bber-item hr {
+    opacity: 0.2;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
+    filter: alpha(opacity=20);
+  }
+  [data-theme='dark'] #icat-bber .icat-page .icat-bber-music .aplayer,
+  [data-theme='dark'] #icat-bber .icat-page .aplayer .aplayer-lrc:before,
+  [data-theme='dark'] #icat-bber .icat-page .aplayer .aplayer-lrc:after {
+    background: var(--icat-card-bg);
+    color: var(--icat-fontcolor);
+  }
+  
+  /* 即刻短文样式 */
