--- a/themes/butterfly/source/css/index.styl
+++ b/themes/butterfly/source/css/index.styl
@@ -11,6 +11,7 @@ if hexo-config('css_prefix')
 @import '_tags/*'
 @import '_mode/*'
 @import '_sxiaohe-style/**/*.css'
+@import '_sxiaohe_styl/**/*'
 
 // search
 if hexo-config('algolia_search.enable')
