--- a/themes/butterfly/source/css/_sxiaohe-style/style/model.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/style/model.css
@@ -102,3 +102,6 @@
 #recent-posts>.recent-post-item .post_cover img.post_bg:hover {
     transform: none
 }
+.category-bar-group {
+    justify-content: space-between;
+}
