更新首页动态分类

--- a/themes/butterfly/source/css/_sxiaohe-style/style/model.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/style/model.css
@@ -98,7 +98,82 @@
     transition: all .3s;
     bottom: 0
 }
-/* 首页文章卡片的图片样式 */
+/* 3.首页文章卡片的图片样式 */
 #recent-posts>.recent-post-item .post_cover img.post_bg:hover {
     transform: none
+}
+/* 4.首页分类条 */
+.layout #recent-posts .home-catalog-bar {
+    background: var(--mj-card-bg);
+    border: var(--style-border);
+    margin-top: 12px;
+    border-radius: 11px !important;
+    transition: .3s;
+    font-size: 15px;
+    padding: 5px .8rem;
+    animation: slide-in .5s .2s backwards;
+    will-change: transform;
+    -webkit-animation: slide-in .5s .2s backwards;
+}
+
+#catalog-bar {
+    padding: .4rem .8rem;
+    border-radius: .5rem;
+    display: flex;
+    border: 1px solid rgba(150, 150, 150, .2);
+    justify-content: space-between;
+}
+
+#catalog-bar i {
+    line-height: inherit;
+}
+
+#catalog-list {
+    margin: 0 .5rem;
+    display: flex;
+    /* white-space: nowrap; */
+    overflow-x: scroll;
+}
+
+.layout #recent-posts #catalog-bar #home-catalog-item {
+    border-radius: .5rem;
+}
+
+.layout #recent-posts #catalog-bar .catalog-shouye-item {
+    margin-right: 3px;
+}
+
+.layout #recent-posts #catalog-bar #home-catalog-item a {
+    background: #00c4b6f1;
+    color: #fff !important;
+}
+
+.catalog-list-item a {
+    margin: 0 .2em;
+    padding: .2em .4em .3em;
+    font-weight: 700;
+    border-radius: .5rem;
+    color: var(--font-color);
+    -webkit-transition: all .15s ease-in-out;
+    -moz-transition: all .15s ease-in-out;
+    -o-transition: all .15s ease-in-out;
+    -ms-transition: all .15s ease-in-out;
+    transition: all .15s ease-in-out;
+}
+
+.catalog-list-item a {
+    margin: 0 .2em;
+    padding: .2em .4em .3em;
+    font-weight: 700;
+    border-radius: .5rem;
+    color: var(--font-color);
+    -webkit-transition: all .15s ease-in-out;
+    -moz-transition: all .15s ease-in-out;
+    -o-transition: all .15s ease-in-out;
+    -ms-transition: all .15s ease-in-out;
+    transition: all .15s ease-in-out;
+}
+
+sup {
+    top: -.5em;
 }
