--- a/themes/butterfly/layout/includes/categoryBar.pug
+++ b/themes/butterfly/layout/includes/categoryBar.pug
@@ -1,9 +1,9 @@
-.category-bar-items#category-bar-items(class=is_home() ? 'home' : '')
-  .category-bar-group
-    .category-bar-item(class=is_home() ? 'select' : '', id="category-bar-home")
+.home-catalog-bar#catalog-bar
+  i.fa-fw.fas.fa-shapes
+  #catalog-list(class=is_home() ? 'home' : '')
+    .category-bar-item.catalog-shouye-item(class=is_home() ? 'select' : '', id="home-catalog-item")
       a(href=url_for('/'))= __('博客')
     each item in site.categories.find({ parent: { $exists: false } }).data
       .category-bar-item(class=select ? (select === item.name ? 'select' : '') : '', id=item.name)
         a(href=url_for(item.path))= item.name
-div.category-bar-right
   a.category-bar-more(href=url_for('/categories/'))= __('更多分类')
