--- a/themes/butterfly/layout/includes/404.pug
+++ b/themes/butterfly/layout/includes/404.pug
@@ -1,6 +1,5 @@
-extends /layout.pug
-
 block content
+  include ./header/index.pug
   #error-wrap
     .error-content
       .error-img(style=`background-image: url(${url_for(theme.error_404.background)})`)
