--- a/themes/butterfly/layout/includes/404.pug
+++ b/themes/butterfly/layout/includes/404.pug
@@ -1,5 +1,6 @@
-block content
+#body-wrap.error404
   include ./header/index.pug
+
   #error-wrap
     .error-content
       .error-img(style=`background-image: url(${url_for(theme.error_404.background)})`)
