--- a/themes/butterfly/layout/includes/404.pug
+++ b/themes/butterfly/layout/includes/404.pug
@@ -2,7 +2,8 @@
 - var bg_img = `background-image: url('${url_for(top_img)}')`
 
 #body-wrap.error
-  include ./header/index.pug
+  div
+    include ./header/index.pug
 
   #error-wrap
     .error-content
