--- a/themes/butterfly/source/css/_sxiaohe-style/style/404.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/style/404.css
@@ -97,11 +97,6 @@
     justify-content: space-between
 }
 
-#body-wrap.error .aside-list .aside-list-item {
-    padding: .5rem 0;
-    width: 49%
-}
-
 #body-wrap.error .aside-list .aside-list-item img {
     width: 100%;
     object-fit: cover;
@@ -138,4 +133,13 @@
     box-shadow: none!important;
     border-radius: 12px;
     background: var(--heo-card-bg)!important
+}
+
+#body-wrap.error .aside-list .aside-list-group {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-width: 800px;
+    margin: 0 auto;
+    justify-content: space-between;
 }
