重新写部分代码

--- a/themes/butterfly/layout/includes/404.pug
+++ b/themes/butterfly/layout/includes/404.pug
@@ -12,7 +12,7 @@ include ./header/index.pug
         .error_subtitle= theme.error_404.subtitle
         a.button--animated(href=config.root)
           i.fas.fa-rocket
-          = _p('error404.back_button')
+          = _p('返回主页')
           
   .aside-list
     .aside-list-group
