--- a/themes/butterfly/layout/includes/hometop.pug
+++ b/themes/butterfly/layout/includes/hometop.pug
@@ -22,3 +22,4 @@
         //-             p.post_cover_text= i.description
         //-       .post_info(onclick=`"window.open(`+url_for(i.link)+`,"_self")"`)
         //-         a.article-title(href=url_for(i.link) title=i.title)= i.title
+       script(src='./hometop.js')
