--- a/themes/butterfly/source/css/_sxiaohe-style/style/model.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/style/model.css
@@ -169,6 +169,22 @@
     transition: all .15s ease-in-out;
 }
 
-sup {
-    top: -.5em;
+/* 5.首页文章列表修改 */
+.recent-posts {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+@media screen and (max-width: 900px) {
+    .recent-posts {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+}
+
+/* 6.首页文章列表卡片颜色修改 */
+#recent-posts>.recent-post-item {
+    border: 2px solid rgba(0, 255, 255, .6);
+    font-size: 14.5px;
+    font-weight: 700;
+    background: rgba(255, 255, 255, .67);
 }
