--- a/themes/butterfly/layout/includes/header/nav.pug
+++ b/themes/butterfly/layout/includes/header/nav.pug
@@ -8,7 +8,7 @@ nav#nav
           .back-menu-list-title 网页
           .back-menu-list
             a.back-menu-item(href='/', title='前往博客主页', target='_blank', one-link-mark='yes')
-              img.back-menu-item-icon(src='/img/avatar.jpg')
+              img.back-menu-item-icon(src='/img/avatar.avif')
               span.back-menu-item-text 博客
             a.back-menu-item(href='https://www.cloud.anheyu.com/', rel='external nofollow', title='前往云盘主页', target='_blank', one-link-mark='yes')
               img.back-menu-item-icon(src='https://npm.elemecdn.com/anzhiyu-blog-static@1.0.4/img/avatar.jpg')
