--- a/themes/butterfly/source/css/_sxiaohe-style/color/chuckleMainColor.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/color/chuckleMainColor.css
@@ -4,7 +4,7 @@
     --mj-theme: #128adadb;
     --mj-secondbg: #ededed;
     --mj-card-border: #e3e8f7;
-    --style-border: 2px solid rgba(0, 255, 255, 0.6);
+    --mj-style-border: 2px solid rgba(0, 255, 255, 0.6);
     --anchor-border: 1px solid rgba(21, 158, 208, 0.8);
     --style-hover-border: 2px solid var(--mj-theme)
 }
