--- a/themes/butterfly/layout/includes/page/essay.pug
+++ b/themes/butterfly/layout/includes/page/essay.pug
@@ -1,9 +1,40 @@
-#icat-bber
-    section.icat-page
-        case theme.essay.mode
-            when 'local'
-                include ./essay/local.pug
-            when 'json'
-                include ./essay/json.pug
-            when 'memos'
-                include ./essay/memos.pug
+#essay_page
+  #bber
+    section.timeline.page-1
+      ul#waterfall.list
+        each i in site.data.essay
+          each item, index in i.essay_list
+            if index < 30
+              li.bber-item
+                .bber-content
+                  p.datacont= item.content
+                    if item.image
+                      .bber-container-img
+                        each iten, indey in item.image
+                          a.bber-content-img(href=item.image[indey], target="_blank", data-fancybox="gallery", data-caption="")
+                            img(src=item.image[indey])
+                        .bber-content-noimg
+                        .bber-content-noimg
+                        .bber-content-noimg
+                    if item.aplayer
+                      .bber-music
+                        .aplayer.no-destroy(data-id=item.aplayer.id data-server=item.aplayer.server data-type="song"  data-order="list" data-preload="none" data-autoplay="false" data-mutex="true" data-theme='var(--anzhiyu-main)')
+                hr
+                .bber-bottom
+                  .bber-info
+                    .bber-info-time
+                      - var datedata = new Date(item.date).toISOString()
+                      i.far.fa-clock
+                      time.datatime(datetime= item.date)= datedata
+                    if item.link
+                      a.bber-content-link(target="_blank", title="跳转到短文指引的链接", href=item.link, rel="external nofollow")
+                        i.fas.fa-link
+                        | 链接
+                    if item.from
+                      .bber-info-from
+                        i.fas.fa-fire
+                        span=item.from
+                  .bber-reply(onclick="anzhiyu.commentText(" + `'${item.content}'` + ")")
+                    i.fa-solid.fa-message
+  #bber-tips(style='color: var(--anzhiyu-secondtext);')
+    | - 只展示最近30条短文 -
