--- a/themes/butterfly/source/css/_sxiaohe-style/style/page.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/style/page.css
@@ -4,31 +4,32 @@
     box-shadow: none !important;
     padding: 0 !important;
     background: transparent !important;
-}
-#page:has(#essay_page) .page-title {
+  }
+  #page:has(#essay_page) .page-title {
     display: none;
-}
-#bber .bber-container-img {
+  }
+  #web_bg ~ .page:has(#essay_page) {
+    background: var(--anzhiyu-background);
+  }
+  #bber .bber-container-img {
     display: flex;
     align-items: center;
     justify-content: space-around;
     width: 100%;
     flex-wrap: wrap;
     margin-bottom: 0.3rem;
-}
-#bber .bber-container-img .bber-content-noimg {
+  }
+  #bber .bber-container-img .bber-content-noimg {
     width: calc(100% / 4 - 5px);
-}
-
-#bber .bber-content-img img,
-#bber .bber-content-img-one img {
+  }
+  
+  #bber .bber-content-img img {
     object-fit: cover;
     max-height: 100%;
     border-radius: 12px;
-    width: 100%;
-}
-
-#bber .bber-content-img {
+  }
+  
+  #bber .bber-content-img {
     height: 100px;
     border-radius: 12px;
     overflow: hidden;
@@ -36,24 +37,13 @@
     position: relative;
     width: calc(100% / 4 - 5px);
     margin-bottom: 10px;
-}
-
-#bber .bber-content-img-one {
-    height: auto;
-    border-radius: 12px;
-    overflow: hidden;
-    display: flex;
-    position: relative;
-    width: 100%;
-    margin-bottom: 10px;
-}
-
-
-#bber .bber-content .datacont {
+  }
+  
+  #bber .bber-content .datacont {
     order: 0;
     font-size: 0.8rem;
     font-weight: 700;
-    color: var(--font-color);
+    color: var(--anzhiyu-fontcolor);
     width: 100%;
     line-height: 1.38;
     border-radius: 12px;
@@ -61,18 +51,18 @@
     display: flex;
     flex-direction: column;
     text-align: justify;
-}
-#bber p {
+  }
+  #bber p {
     margin: 0px;
-}
-#bber div.bber-content {
+  }
+  #bber div.bber-content {
     display: flex;
     flex-flow: wrap;
     border-radius: 12px;
     width: 100%;
     height: 100%;
-}
-#bber .timeline ul li.bber-item {
+  }
+  #bber .timeline ul li.bber-item {
     position: relative;
     width: 32%;
     border: var(--style-border-always);
@@ -83,91 +73,86 @@
     flex-flow: column nowrap;
     justify-content: space-between;
     align-items: flex-start;
-    background: var(--june-card-bg);
-    box-shadow: var(--june-shadow-border);
+    background: var(--anzhiyu-card-bg);
+    box-shadow: var(--anzhiyu-shadow-border);
     margin-right: 2%;
-}
-#bber .timeline #waterfall.show {
+  }
+  #bber .timeline #waterfall.show {
     opacity: 1;
-}
-#bber .timeline #waterfall {
+  }
+  #bber .timeline #waterfall {
     opacity: 0;
     transition: all 0.3s ease 0s;
-}
-#bber ul.list {
+  }
+  #bber ul.list {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-}
-#bber {
+  }
+  #bber {
     margin-top: 1rem;
     width: 100%;
-}
-#bber > section > ul > li.bber-item {
+  }
+  #bber > section > ul > li.bber-item {
     margin-bottom: 1rem;
-}
-
-#bber-tips {
+  }
+  
+  #bber-tips {
     font-size: 14px;
     display: flex;
     justify-content: center;
     margin-top: 1rem;
-}
-
-#bber .timeline ul li.bber-item hr {
+  }
+  
+  #bber .timeline ul li.bber-item hr {
     display: flex;
     position: relative;
     margin: 8px 0px;
-    border: 1px dashed var(--june-theme-op);
+    border: 1px dashed var(--anzhiyu-theme-op);
     width: 100%;
-    content: linear-gradient(to right, var(--june-theme), var(--june-theme));
-}
-
-#bber .bber-info {
+  }
+  
+  #bber .bber-info {
     display: flex;
     align-items: center;
-}
-
-#bber > section > ul > li > div .bber-info-time,
-#bber > section > ul > li > div .bber-info-from {
-    color: var(--june-fontcolor);
+  }
+  
+  #bber > section > ul > li > div .bber-info-time,
+  #bber > section > ul > li > div .bber-info-from {
+    color: var(--anzhiyu-fontcolor);
     font-size: 0.7rem;
-    background-color: var(--june-gray-op);
+    background-color: var(--anzhiyu-gray-op);
     padding: 0px 8px;
     border-radius: 20px;
     cursor: default;
     display: flex;
     align-items: center;
-}
-
-#bber .bber-info .far.fa-clock {
+  }
+  
+  #bber .bber-info .far.fa-clock {
     margin-right: 4px;
-}
-#bber > section > ul > li > div .bber-info-from span,
-#bber > section > ul > li > div .bber-info-from {
+  }
+  #bber > section > ul > li > div .bber-info-from span,
+  #bber > section > ul > li > div .bber-info-from {
     margin-left: 4px;
-}
-
-#bber .bber-bottom {
+  }
+  
+  #bber .bber-bottom {
     display: flex;
     justify-content: space-between;
     width: 100%;
     margin-top: 10px;
-}
-
-#bber .bber-bottom .bber-reply {
+  }
+  
+  #bber .bber-bottom .bber-reply {
     cursor: pointer;
-}
-
-#bber .bber-bottom .bber-reply :hover{
-    color: var(--june);
-}
-
-#bber .timeline ul li.bber-item:hover {
+  }
+  
+  #bber .timeline ul li.bber-item:hover {
     border: var(--style-border-hover);
-}
-
-#bber .bber-content-link {
+  }
+  
+  #bber .bber-content-link {
     display: flex;
     margin-left: 0.5rem;
     font-size: 0.7rem;
@@ -176,105 +161,109 @@
     color: rgb(245, 108, 108);
     padding: 0px 8px;
     border-radius: 20px;
-}
-#bber .bber-content-link i {
+  }
+  #bber .bber-content-link i {
     margin-right: 3px;
-}
-#bber .bber-content-link:hover {
-    background-color: var(--june-main);
-    color: var(--june-white);
-}
-#bber .bber-music {
+  }
+  #bber .bber-content-link:hover {
+    background-color: var(--anzhiyu-main);
+    color: var(--anzhiyu-white);
+  }
+  #bber .bber-music {
     width: 100%;
     height: 90px;
     margin: 0.5rem 0;
     border-radius: 8px;
     overflow: hidden;
     border: var(--style-border-always);
-    background: var(--june-secondbg);
-}
-#bber .aplayer {
+    background: var(--anzhiyu-secondbg);
+  }
+  #bber .aplayer {
     margin: 0;
-}
-
-#bber .aplayer.aplayer-withlrc .aplayer-pic {
+  }
+  
+  #bber .aplayer.aplayer-withlrc .aplayer-pic {
     height: 82px;
     width: 82px;
     margin: 4px;
     border-radius: 4px;
-}
-.bber-music .aplayer.aplayer-withlrc .aplayer-info {
+  }
+  .bber-music .aplayer.aplayer-withlrc .aplayer-info {
     padding: 5px 7px 0;
-}
-#bber .aplayer .aplayer-info .aplayer-music {
+  }
+  #bber .aplayer .aplayer-info .aplayer-music {
     height: 23px;
-}
-#bber .aplayer .aplayer-info .aplayer-music .aplayer-title {
+  }
+  #bber .aplayer .aplayer-info .aplayer-music .aplayer-title {
     font-size: 0.8rem;
     font-weight: 700;
     margin: 0;
-    color: var(--june-fontcolor);
-}
-
-#bber .aplayer .aplayer-info .aplayer-controller {
+    color: var(--anzhiyu-fontcolor);
+  }
+  
+  #bber .aplayer .aplayer-info .aplayer-controller {
     align-items: center;
-}
-#bber .aplayer .aplayer-info .aplayer-controller .aplayer-bar-wrap {
+  }
+  #bber .aplayer .aplayer-info .aplayer-controller .aplayer-bar-wrap {
     padding: 0;
-}
-#bber .aplayer .aplayer-info .aplayer-controller .aplayer-time {
+  }
+  #bber .aplayer .aplayer-info .aplayer-controller .aplayer-time {
     position: initial;
-}
-#bber .aplayer .aplayer-info .aplayer-controller .aplayer-bar-wrap .aplayer-bar {
-    background: var(--june-gray);
+  }
+  #bber .aplayer .aplayer-info .aplayer-controller .aplayer-bar-wrap .aplayer-bar {
+    background: var(--anzhiyu-gray);
     height: 8px;
     border-radius: 12px;
     transition: 0.3s;
     overflow: hidden;
-}
-#bber .aplayer .aplayer-info .aplayer-controller .aplayer-bar-wrap .aplayer-bar .aplayer-loaded {
+  }
+  #bber .aplayer .aplayer-info .aplayer-controller .aplayer-bar-wrap .aplayer-bar .aplayer-loaded {
     height: 100%;
     border-radius: 12px;
-}
-#bber .aplayer .aplayer-info .aplayer-controller .aplayer-bar-wrap .aplayer-bar .aplayer-played {
+  }
+  #bber .aplayer .aplayer-info .aplayer-controller .aplayer-bar-wrap .aplayer-bar .aplayer-played {
     height: 100%;
     border-radius: 12px;
-}
-#bber .aplayer .aplayer-info .aplayer-controller .aplayer-bar-wrap .aplayer-bar .aplayer-played .aplayer-thumb {
+  }
+  #bber .aplayer .aplayer-info .aplayer-controller .aplayer-bar-wrap .aplayer-bar .aplayer-played .aplayer-thumb {
     display: none;
-}
-#bber .aplayer .aplayer-info .aplayer-controller .aplayer-time {
+  }
+  #bber .aplayer .aplayer-info .aplayer-controller .aplayer-time {
     position: initial;
-}
-.author-content.author-content-item.essayPage {
+  }
+  
+  /* 顶部样式 */
+  .author-content.author-content-item.essayPage {
     height: 19rem;
-    background: url(https://img.june-pj.cn/img/cover.webp) left 28% / cover no-repeat;
-    color: var(--june-white);
+    background: url(https://img02.anheyu.com/adminuploads/1/2022/08/21/630249e2df20f.jpg) left 28% / cover no-repeat;
+    color: var(--anzhiyu-white);
     overflow: hidden;
     margin-top: 0px;
-}
-#page:has(#essay_page) .author-content-item .card-content .banner-button-group .banner-button:hover {
-    color: var(--june-white);
+  }
+  #page:has(#essay_page) .author-content-item .card-content .banner-button-group .banner-button:hover {
+    color: var(--anzhiyu-white);
     border-radius: 20px !important;
-}
-@media screen and (max-width: 1300px) {
+  }
+  
+  /* 响应式 */
+  @media screen and (max-width: 1300px) {
     #bber .timeline ul li.bber-item {
-        width: 49%;
-        margin-right: 1%;
+      width: 49%;
+      margin-right: 1%;
     }
-}
-@media screen and (max-width: 768px) {
+  }
+  @media screen and (max-width: 768px) {
     #bber .timeline ul li.bber-item {
-        width: 100%;
-        margin-right: 0px;
+      width: 100%;
+      margin-right: 0px;
     }
-}
-[data-theme="dark"] #bber .bber-music .aplayer,
-[data-theme="dark"] #bber .aplayer .aplayer-lrc:before,
-[data-theme="dark"] #bber .aplayer .aplayer-lrc:after {
-    background: var(--june-card-bg);
-    color: var(--june-fontcolor);
-}
-#bber .aplayer .aplayer-lrc p {
-    color: var(--june-fontcolor);
-}
+  }
+  [data-theme="dark"] #bber .bber-music .aplayer,
+  [data-theme="dark"] #bber .aplayer .aplayer-lrc:before,
+  [data-theme="dark"] #bber .aplayer .aplayer-lrc:after {
+    background: var(--anzhiyu-card-bg);
+    color: var(--anzhiyu-fontcolor);
+  }
+  #bber .aplayer .aplayer-lrc p {
+    color: var(--anzhiyu-fontcolor);
+  }
