--- a/themes/butterfly/source/css/_sxiaohe-style/style/index.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/style/index.css
@@ -1,7 +1,8 @@
 /* 首页设置 */
 /* 由苏晓河进行编写以及调整 */
 /* 时间：2025年2月4日 */
-/* 侧边栏整体卡片样式调整 */
+
+/* 1.侧边栏整体卡片样式调整 */
 #aside-content .card-widget {
     border-width: 2px;
     border-style: solid;
@@ -10,15 +11,15 @@
     transition: 0.3s;
     background: rgba(255, 255, 255, .67);
 }
-/* 侧边栏整体卡片文字样式调整 */
+/* 2.侧边栏整体卡片文字样式调整 */
 #aside-content .card-widget.card-friend-link, .card-webinfo {
     font-size: 105%;
 }
-/* 侧边栏整体卡片和首页文章列表样式调整 */
+/* 3.侧边栏整体卡片和首页文章列表样式调整 */
 #aside-content .card-widget, #recent-posts>.recent-post-item {
     border-radius: 18px;
 }
-/* 侧边栏本人介绍卡片样式调整 */
+/* 4.侧边栏本人介绍卡片样式调整 */
 .avatar-img {
     border-radius: 25px!important;
     box-shadow: 2.2px 2.2px 2.2px rgba(10, 207, 233, .3)!important;
@@ -54,7 +55,7 @@
     color: var(--text-highlight-color);
     font-size: 1.4em!important;
 }
-/* 侧边栏其他卡片样式调整 */
+/* 5.侧边栏其他卡片样式调整 */
 #aside-content .card-widget:not(.card-info):not(#card-tuijian):before {
     content: "";
     width: 12.5px;
@@ -69,7 +70,7 @@
     clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 calc(100% - 52.5px), 12.5px calc(100% - 40px), 12.5px calc(100% - 50px), 0 calc(100% - 62.5px), 0 calc(100% - 82.5px), 12.5px calc(100% - 70px), 12.5px calc(100% - 80px), 0 calc(100% - 92.5px), 0 calc(100% - 112.5px), 12.5px calc(100% - 100px), 12.5px calc(100% - 112.5px), 12.5px calc(100% - 110px), 0 calc(100% - 122.5px), 0 calc(100% - 142.5px), 12.5px calc(100% - 130px), 12.5px calc(100% - 141.5px), 0 calc(100% - 154px), 0 0);
     border-left: none !important;
 }
-/* 首页文章卡片样式表调整 */
+/* 6.首页文章卡片样式表调整 */
 #recent-posts > .recent-post-item >.recent-post-info > .article-title {
     text-align: center;
 }
@@ -79,7 +80,7 @@
 #recent-posts > .recent-post-item >.recent-post-info > .content {
     text-align: center;
 }
-/* QCQX 首页文章卡片设置 */
+/* 7.QCQX 首页文章卡片设置 */
 #recent-posts>.recent-post-item {
     display: -webkit-box;
     display: -moz-box;
@@ -113,229 +114,8 @@
         height: 300px
     }
 }
-/* QCQX 首页文章卡片设置 */
+/* 8.QCQX 首页文章卡片设置 */
 #recent-posts > .recent-post-item .post_cover img.post_bg {
     border-radius: 12px;
     transform: none;
 }
-
-/* BBTIMELIST CSS */
-.essay-mini {
-    background: var(--card-bg);
-    color: var(--font-color);
-    padding: 0.5rem 1rem;
-    border-radius: 8px;
-    -webkit-box-shadow: var(--icat-shadow-border);
-    box-shadow: var(--icat-shadow-border);
-    display: -webkit-box;
-    display: -moz-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: box;
-    display: flex;
-    border: var(--style-border);
-    -webkit-box-align: center;
-    -moz-box-align: center;
-    -o-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-    height: 50px;
-    -webkit-animation: slide-in 0.6s 0.4s backwards;
-    -moz-animation: slide-in 0.6s 0.4s backwards;
-    -o-animation: slide-in 0.6s 0.4s backwards;
-    -ms-animation: slide-in 0.6s 0.4s backwards;
-    animation: slide-in 0.6s 0.4s backwards;
-    will-change: transform;
-    -webkit-transition: 0.6s;
-    -moz-transition: 0.6s;
-    -o-transition: 0.6s;
-    -ms-transition: 0.6s;
-    transition: 0.6s;
-  }
-  .essay-mini:hover {
-    border: var(--style-border-hover-always);
-  }
-  .essay-mini #Essay {
-    overflow: hidden;
-    width: 100%;
-    overflow: hidden;
-    -o-text-overflow: ellipsis;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-  .essay-mini #Essay #essay-mini {
-    width: 100%;
-    height: 25px;
-    line-height: 25px;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: box;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -moz-box-orient: vertical;
-    -o-box-orient: vertical;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
-  .essay-mini #Essay .li-style {
-    width: auto;
-    max-width: 100%;
-    height: 25px;
-    text-align: center;
-    overflow: hidden;
-    -o-text-overflow: ellipsis;
-    text-overflow: ellipsis;
-    font-weight: 700;
-    margin: auto;
-    cursor: pointer;
-    white-space: nowrap;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-  .essay-mini i,
-  .essay-mini .li-style {
-    -webkit-transition: 0.6s;
-    -moz-transition: 0.6s;
-    -o-transition: 0.6s;
-    -ms-transition: 0.6s;
-    transition: 0.6s;
-    cursor: pointer;
-  }
-  .essay-mini i:hover,
-  .essay-mini .li-style:hover {
-    color: var(--icat-blue);
-  }
-  
-  /* 即刻mini样式 */
-
-/* 即刻mini样式优化 */
-.essay-mini {
-    width: 1300px;
-    margin: auto;
-    border: 2px solid rgba(0, 255, 255, .6);
-    background: rgba(255, 255, 255, .67)
-}
-@media screen and (max-width: 768px) {
-    .essay-mini {
-        width: auto;
-        margin: 0;
-        margin-bottom: 10px;
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-}
-@media screen and (max-width: 900px) {
-    .essay-mini {
-        width: auto;
-        margin: 0;
-        margin-bottom: 10px;
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-}
-@media screen and (max-width: 1200px) {
-    .essay-mini {
-        width: auto;
-        margin: 0;
-        margin-bottom: 10px;
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-}
-
-#bbTimeList {
-    background: var(--anzhiyu-white);
-    color: var(--anzhiyu-fontcolor);
-    padding: 0.5rem 1rem;
-    border-radius: 10px;
-    box-shadow: var(--anzhiyu-shadow-lightblack);
-    display: flex;
-    transition: all 0.3s ease 0s;
-    margin: 1rem auto 0;
-    border: var(--style-border);
-    align-items: center;
-    height: 50px;
-    width: 100%;
-    margin-top: 0;
-  }
-  [data-theme="dark"] #bbTimeList {
-    background: #000 !important;
-  }
-  #bbtalk {
-    width: 100%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-  #bber-talk {
-    width: 100%;
-    height: 25px;
-    line-height: 25px;
-    display: flex;
-    flex-direction: column;
-  }
-  .bber-logo {
-    font-size: 1.5rem;
-    line-height: 22px;
-    margin-right: 1rem;
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-  }
-  
-  .bber-gotobb {
-    line-height: 25px;
-    margin-left: 1rem;
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-  }
-  
-  #bber-talk .li-style {
-    width: 100%;
-    max-width: 100%;
-    height: 25px;
-    text-align: center;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    transition: 0.3s;
-    font-weight: 700;
-    margin: auto;
-    cursor: pointer;
-    white-space: nowrap;
-  }
-  
-  #bbTimeList:hover {
-    border: var(--style-border-hover);
-    box-shadow: var(--anzhiyu-shadow-main);
-  }
-  
-  /* 文章页H1-H6图标样式效果 */
-  .bbTimeList .bber-logo {
-    -webkit-animation: rotate 1.6s linear infinite;
-    animation: rotate 1.6s linear infinite;
-  }
-  @-webkit-keyframes rotate {
-    0% {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    to {
-      -webkit-transform: rotate(-1turn);
-      transform: rotate(-1turn);
-    }
-  }
-  @keyframes rotate {
-    0% {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    to {
-      -webkit-transform: rotate(-1turn);
-      transform: rotate(-1turn);
-    }
-  }
