--- a/themes/butterfly/layout/category.pug
+++ b/themes/butterfly/layout/category.pug
@@ -6,6 +6,7 @@ block content
     #recent-posts.recent-posts.
       #category-bar.category-bar
         include includes/categoryBar.pug
+      #categories-chart(data-parent="true" style="border-radius: 8px; height: 300px; padding: 10px;")
       +postUI
       include includes/pagination.pug
   else
