--- a/themes/butterfly/layout/archive.pug
+++ b/themes/butterfly/layout/archive.pug
@@ -3,6 +3,7 @@ extends includes/layout.pug
 block content
   include ./includes/mixins/article-sort.pug
   #archive
+    #posts-chart(data-start="2022-01" style="border-radius: 8px; height: 300px; padding: 10px;")
     - const archiveLength = findArchiveLength(fragment_cache)
     .article-sort-title= _p('page.articles') + ' - ' + archiveLength
     +articleSort(page.posts)
