--- a/themes/butterfly/layout/includes/head/preconnect.pug
+++ b/themes/butterfly/layout/includes/head/preconnect.pug
@@ -1,4 +1,4 @@
-link(rel="preconnect" href="//cdn.jsdelivr.net")
+link(rel="preconnect" href="//lf6-cdn-tos.bytecdntp.com/")
 
 if theme.google_analytics
   link(rel="preconnect" href="//www.google-analytics.com" crossorigin='')
