优化添加内容

--- a/themes/butterfly/source/css/_sxiaohe_styl/_page/home.styl
+++ b/themes/butterfly/source/css/_sxiaohe_styl/_page/home.styl
@@ -10,4 +10,4 @@ if hexo-config('hometop.enable') || hexo-config('brevity.enable')
       margin-top 0
 
 if hexo-config('hometop.enable')
-  @import "home-top.styl"
+  @import "hometop.styl"
