优化添加内容

--- a/themes/butterfly/source/css/_sxiaohe_styl/_page/hometop.styl
+++ b/themes/butterfly/source/css/_sxiaohe_styl/_page/hometop.styl
@@ -57,7 +57,7 @@
           .tags-group-icon:nth-child(even)
             margin-left 4rem
 
-  /.topGroup
+  .topGroup
     display flex
     gap .5rem
     +maxWidth1200()
@@ -128,7 +128,7 @@
             if $language == 'en-US'
               left -90px
 
-      /.top-post-info
+      .top-post-info
         padding .3rem .5rem .3rem .5rem
         transition .3s
 
