--- a/themes/butterfly/layout/includes/hometop.pug
+++ b/themes/butterfly/layout/includes/hometop.pug
@@ -1,7 +1,7 @@
 .recent-top-post-group#recent-top-post-group
     .recent-post-top#recent-post-top
-        #bannerGroup
-            #banners
+        #home_top_iconsCard
+            #home_top_iconsCard_content
                 include ./banner.pug
         if theme.hometop.recommendList.enable
             .topGroup
