优化添加内容

--- a/themes/butterfly/layout/includes/layout.pug
+++ b/themes/butterfly/layout/includes/layout.pug
@@ -20,9 +20,9 @@ html(lang=config.language data-theme=theme.display_mode class=htmlClassHideAside
       #body-wrap(class=pageType)
         include ./header/index.pug
         if is_home()
-          if theme.hometop.enable
             #home_top
               include ./bbtimelist.pug
+              include ./hometop.pug
 
         main#content-inner.layout(class=hideAside)
           if body
